@@ -1,0 +1,7 @@
+*.egg-info
+*.pyc
+*.pyo
+*.mo
+dist
+searchindex.js
+search.html
